# compilers-6-term

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: TODO.md  example.txt  grammar.md
include/parsing/: ast.hpp  ast_traits.hpp  parse.hpp
include/tokenization/: token.hpp  tokenize.hpp
include/util/: box.hpp  overloaded.hpp  position.hpp  variant.hpp
include/visitors/: interpreter.hpp  print_visitor.hpp
scripts/: build.sh  clean.sh  install_requirements.sh  test.sh
src/: CMakeLists.txt
src/parsing/: CMakeLists.txt  parse.cpp
src/tokenization/: CMakeLists.txt  tokenize.cpp
src/util/: CMakeLists.txt  position.cpp  util.cpp
src/visitors/: CMakeLists.txt  interpreter.cpp  print_visitor.cpp
tests/: CMakeLists.txt  interpreter_tests.cpp  parse_tests.cpp  print_visitor_tests.cpp  tokenize_tests.cpp
